Add the font family PT sans

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Beetroot</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
   <meta name="viewport" content="...">
 </head>
 <body>
