--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Beetroot</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:700" rel="stylesheet">
   <meta name="viewport" content="...">
 </head>
 <body>
