Add some css and connect the css to the html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:700" rel="stylesheet">
   <meta name="viewport" content="...">
+  <link href=".css" rel="stylesheet">
 </head>
 <body>
 
@@ -22,7 +23,7 @@
 
   <main>
     <figure>
-      <img src="..." alt="beetroot">
+      <img src="images/beets.jpg" alt="beetroot">
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
     <p><data value="55-65">55 to 65 days</data> are needed from germination to harvest the root.</p>
