Adjust the text sizes and colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:700" rel="stylesheet">
   <meta name="viewport" content="...">
-  <link href=".css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-        <li><a href="#">Common varieties</a></li>
-        <li><a href="#">Nutritional information</a></li>
-        <li><a href="#">Tags</a></li>
+        <li><a href="#commonvarieties">Common varieties</a></li>
+        <li><a href="#nutritionalinformation">Nutritional information</a></li>
+        <li><a href="#tags">Tags</a></li>
       </ol>
     </nav>
   </header>
@@ -32,9 +32,9 @@
 
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q></p>
 
-    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets." <cite>-Chris Pratt</cite></blockquote>
+    <blockquote class="blockquote">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets." <cite>-Chris Pratt</cite></blockquote>
 
-    <h2>Common varieties</h2>
+    <h2 id="commonvarieties">Common varieties</h2>
 
     <ol>
       <li>Albino</li>
@@ -44,7 +44,7 @@
       <li>Early Wonder</li>
     </ol>
 
-    <h2>Nutritional information</h2>
+    <h2 id="nutritionalinformation">Nutritional information</h2>
 
     <dl>
       <dt>Serving size:</dt>
@@ -62,7 +62,7 @@
   </main>
 
   <aside>
-    <h2>Tags</h2>
+    <h2 id="tags">Tags</h2>
 
     <ul>
       <li>Crimson</li>
