--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q></p>
 
-    <blockquote class="blockquote">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets." <cite>-Chris Pratt</cite></blockquote>
+    <blockquote class="blockquote">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets."
+      <cite class="cite">-Chris Pratt
+    </cite>
+  </blockquote>
 
     <h2 id="commonvarieties">Common varieties</h2>
 
