--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Beetroot</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:400" rel="stylesheet">
   <meta name="viewport" content="...">
   <link href="css/main.css" rel="stylesheet">
 </head>
@@ -28,14 +28,14 @@
     </figure>
     <p><data value="55-65">55 to 65 days</data> are needed from germination to harvest the root.</p>
 
-    <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+    <p class="intro">The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q></p>
 
     <blockquote class="blockquote">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets."
       <cite class="cite">-Chris Pratt
-    </cite>
-  </blockquote>
+      </cite>
+    </blockquote>
 
     <h2 id="commonvarieties">Common varieties</h2>
 
@@ -50,8 +50,8 @@
     <h2 id="nutritionalinformation">Nutritional information</h2>
 
     <dl>
-      <dt>Serving size:</dt>
-      <dd><data value="100">100g </data></dd>
+      <dt class="serving">Serving size:</dt>
+      <dd class="serving"><data value="100">100g </data></dd>
 
       <dt>Energy:</dt>
       <dd><data value="180">180 kJ</data></dd>
