--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p class="intro">The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q></p>
+    <p class="intro">In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q></p>
 
     <blockquote class="blockquote">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets."
       <cite class="cite">-Chris Pratt
@@ -39,7 +39,7 @@
 
     <h2 id="commonvarieties">Common varieties</h2>
 
-    <ol>
+    <ol class="ol">
       <li>Albino</li>
       <li>Bull's Blood</li>
       <li>Chioggia</li>
